# x10xchange-go-sdk

./: .env.example  README.md  go.mod  go.sum
examples/: simple.go  test_signing.go
examples/auth/: main.go
examples/env/: main.go
examples/hsh/: main.go
examples/po/: main.go
examples/simple/: main.go
pkg/client/: client.go  http_client.go  public_client.go
pkg/clients/: http_client.go
pkg/clients/public/: public_client.go
pkg/config/: config.go
pkg/models/: account.go  credentials.go  error.go  market.go  response.go
pkg/models/private/: account.go
pkg/models/public/: funding_rates.go  orderbook.go
python_sdk/: pyproject.toml  test_sign_compare.py
python_sdk/sdk_examples/: placed_order_example_simple.py  stream_example.py
x10/: config.go  x10.go
x10/clients/: http_client.go
x10/clients/public/: client.go  getter.go  public_client.go
x10/clients/trading/: client.go  getter.go  leverage.go  order.go  public.go  trading_client.go
x10/models/: amounts.go
x10/models/info/: asset.go  candles.go  funding_rates.go  market.go  market_stats.go  open_interest.go  orderbook.go  trades.go
x10/models/public/: candles.go  market.go  market_stats.go  open_interest.go  trades.go
x10/models/user/: account.go  asset_operations.go  balance.go  fees.go  funding_payments.go  orders.go  orders_request.go  positions.go  positions_history.go  rebates.go  trades.go
x10/perpetual/: order.go
x10/utils/starknet/: hash.go  starknet.go  utils.go
